# alt-regular-backgrounds

./: .gitignore  AUTHORS  LICENSE  README.md  alt-regular-backgrounds.doap  meson.build  meson_options.txt
.github/workflows/: alt-sisyphus.yml  master.yml
backgrounds/gnome/: alt-regular-gnome-blue-hex.xml.in  alt-regular-gnome-hex-black.xml.in  alt-regular-gnome-hex-blue.xml.in  alt-regular-gnome-hex-green.xml.in  alt-regular-gnome-hex-orange.xml.in  alt-regular-gnome-liberation-blue.xml.in  alt-regular-gnome-liberation-green.xml.in  alt-regular-gnome-liberation-yellow.xml.in  alt-regular-gnome-liberation.xml.in  alt-regular-gnome.xml.in  meson.build
backgrounds/kde/: meson.build
backgrounds/kde/alt-regular-kde/: metadata.json
backgrounds/kde/alt-regular-kde-green-hex/: metadata.json
backgrounds/kde/alt-regular-kde-hex-black/: metadata.json
backgrounds/kde/alt-regular-kde-hex-blue/: metadata.json
backgrounds/kde/alt-regular-kde-hex-green/: metadata.json
backgrounds/kde/alt-regular-kde-hex-orange/: metadata.json
backgrounds/kde/alt-regular-kde-liberation/: metadata.json
backgrounds/kde/alt-regular-kde-liberation-blue/: metadata.json
backgrounds/kde/alt-regular-kde-liberation-green/: metadata.json
backgrounds/kde/alt-regular-kde-liberation-orange/: metadata.json
backgrounds/phosh/: meson.build  orange-hex.xml.in
build-aux/sisyphus/: alt-regular-backgrounds.spec
