backgrounddir = join_paths(datadir, 'wallpapers')

bgdirs = [
  'alt-regular-kde-hex-black',
  'alt-regular-kde-hex-blue',
  'alt-regular-kde-hex-green',
  'alt-regular-kde-hex-orange',
  'alt-regular-kde-liberation',
  'alt-regular-kde-liberation-blue',
  'alt-regular-kde-liberation-green',
  'alt-regular-kde-liberation-orange'
]

foreach bgdir : bgdirs
  install_subdir(bgdir, install_dir: backgrounddir)
endforeach
